# FlatDrop

./: .gitignore  BACKGROUND_TRANSFERS.md  INTEGRATION_GUIDE.md  LICENSE  LIQUID_GLASS_IMPLEMENTATION.md  PLATFORM_COMPARISON.md  PRODUCTION_AUDIT.md  README.md  build_harmony.sh
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/flatdrop/: MainActivity.kt
android/app/src/main/java/com/flatdrop/background/: BackgroundTransferManager.kt  TransferForegroundService.kt
android/app/src/main/java/com/flatdrop/ui/components/: LiquidDropZone.kt  LiquidGlass.kt  MagneticNavigation.kt
android/app/src/main/java/com/flatdrop/ui/home/: FileShareScreen.kt  HomeScreen.kt
android/app/src/main/java/com/flatdrop/ui/theme/: Color.kt  LiquidModifier.kt  MagneticModifier.kt  Shaders.kt  Theme.kt  Type.kt
desktop/src/background/: sleep_inhibitor.rs
harmonyos/entry/: oh-package.json5
harmonyos/entry/src/main/: module.json5
harmonyos/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
harmonyos/entry/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
harmonyos/entry/src/main/ets/background/: BackgroundTransferManager.ets
harmonyos/entry/src/main/ets/core/: FlatDropCore.ts
harmonyos/entry/src/main/ets/entryability/: EntryAbility.ets
harmonyos/entry/src/main/ets/pages/: Index.ets
harmonyos/entry/src/main/ets/proto/: messages.ts
ios/FlatDrop/: FileShareScreen.swift  LiquidGlass.metal
ios/FlatDrop/Background/: BackgroundTransferManager.swift
native/: README.md
native/hub/: Cargo.toml  build.rs
native/hub/src/: crypto.rs  database.rs  discovery.rs  ffi.rs  handoff.rs  hub.rs  iroh_engine.rs  lib.rs  portal.rs  types.rs
proto/: messages.proto
