[package]
name = "hub"
version = "0.1.0"
edition = "2021"
description = "Core logic for FlatDrop - Secure P2P File Transfer"
authors = ["FlatDrop Team"]
license = "MIT"
repository = "https://github.com/flatdrop/flatdrop"
readme = "../../README.md"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[features]
default = []
dev-logging = []
dangerous-raw-keys = []

[dependencies]
# --- Core Async & Runtime ---
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-channel = "2.3"
flume = "0.11"

# --- Serialization & Data ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.10"
# Protobuf
prost = "0.13"

# --- Networking & P2P ---
# Iroh (Stable 0.35.x series)
iroh = "0.35"
iroh-blobs = "0.35"
# Discovery
mdns-sd = "0.11"
hostname = "0.4.2"
portpicker = "0.1"

# --- Web Server (Axum Stack) ---
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
axum-range = "0.4"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["timeout", "cors", "trace", "limit"] }
http = "1.0"
urlencoding = "2.1.3"

# --- Database ---
libsql = { version = "0.6", features = ["hrana"] }

# --- Security & Cryptography ---
# Key Exchange & Encryption
chacha20poly1305 = { version = "0.10", features = ["zeroize"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "zeroize"] }
ed25519-dalek = "2.1"
argon2 = "0.5"
blake3 = "1.5"
sha2 = "0.10"
hkdf = { version = "0.12", features = ["zeroize"] }
zeroize = { version = "1.8.2", features = ["derive"] }
subtle = "2.5"
rand = "0.8"
rand_core = "0.6"

# --- Utilities ---
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1.12", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
once_cell = "1.20"
parking_lot = "0.12"
tempfile = "3"
dirs = "6.0.0"
num_cpus = "1.16"
rcgen = "0.12" # Certificate generation

# --- Logging & Tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"